# whale-tag-recovery

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Deployment.md  Makefile  README.md  Recovery-Board-0V9-3-Testing.ino  build_tags.sh  iteratinator.sh  platformio.ini  rtl_aprs.sh
APRS_tag_test/: APRS_tag_test.ino  Recovery-Board-0V9-Testing.ino
KaveetSakshamRecoveryBoard/: .cproject  .mxproject  .project  KaveetSakshamRecoveryBoard Debug.launch  KaveetSakshamRecoveryBoard.elf  KaveetSakshamRecoveryBoard.ioc
KaveetSakshamRecoveryBoard/AZURE_RTOS/App/: app_azure_rtos_config.h
KaveetSakshamRecoveryBoard/Core/Inc/: config.h  main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
KaveetSakshamRecoveryBoard/Core/Src/: app_threadx.c  config.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c  tx_initialize_low_level.S
KaveetSakshamRecoveryBoard/Debug/: KaveetSakshamRecoveryBoard.elf  KaveetSakshamRecoveryBoard.list  KaveetSakshamRecoveryBoard.map  makefile  objects.list  sources.mk
WhaleTagRecovery/: .cproject  .project  STM32U575VGTX_FLASH.ld  WhaleTagRecovery.ioc  WhaleTagRecovery.launch
WhaleTagRecovery/Core/Inc/: config.h  main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  tx_user.h
WhaleTagRecovery/Core/Src/: app_threadx.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_hal_timebase_tim.c  stm32u5xx_it.c
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
build2/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
build2/pico_extras/: Makefile  cmake_install.cmake
build2/pico_extras/src/: Makefile  cmake_install.cmake
build2/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
build2/recovery/: Makefile  cmake_install.cmake  recovery.dis  recovery.elf  recovery.elf.map  recovery.hex  recovery.uf2
build2/swarm/: Makefile  cmake_install.cmake  swarm.dis  swarm.elf  swarm.elf.map  swarm.hex  swarm.uf2
config-parser/: configuration.json  example.json  floater.json  json2header.py  json_options.txt  matthew.json
debug/sdk-capture-logs/: aprs-delay-param-breakdown.csv  sdk-capture-07062022.txt  tag-capture-07112022.txt
debug/swarm-logs/: log-06082022-1540.txt  log-06082022-matthew.txt  log-06092022-devicerssi.txt  log-06132022-1503.txt  log-06132022-1535.txt  log-06132022-2111-MsgSent.txt  log-06132022-2248-MsgSent.txt  log-06142022-1144-MsgSent.txt  log-06142022-1445.txt
debug/unit_tests/src/: CMakeLists.txt  dma_test.c  plotter.py
deprecated/0V9/Recovery-Board-0V9-Testing/: Recovery-Board-0V9-Testing.ino
deprecated/1V0-Direct/RB1V0-DirectSwarm-wAPRS/: RB1V0-DirectSwarm-wAPRS.ino  aprs-crc-capture.txt
deprecated/1V0-Direct/RB1V0_1_Direct_Z/: RB1V0_1_Direct_APRS.ino  RB1V0_1_Direct_Z.ino
deprecated/UnitTests/tagUartTest/: tagUartTest.ino
docker/docs/: Docsfile
docker/pico/: Picofile  pico_entry.sh
docs/: Doxyfile  Doxyfile.in
docs/rst/: conf.py  index.rst
hardware/: RecoveryBoard_3v1r1_BOM.xlsx  WhaleTagRecovery_3v2r1_BOM.xlsx  WhaleTagRecovery_3v2r1_EasyEDA.epro
lib/: CMakeLists.txt
pico/: iteratinator.sh
pico/src/: CMakeLists.txt  aprs.c  aprs.h  ceti_aprs.c  ceti_aprs.h  sdk_conn.c  vhf.c  vhf.h
pico/unit_tests/src/: just_talk.c
recovery/: CMakeLists.txt  aprs.c  aprs.h  constants.h  gps.c  gps.h  main.c  main_swarm.c  minmea.c  setup_utils.h  sleep.c  sleep.h  swarm.c  swarm.h  tag.c  tag.h  ublox-config.c  ublox-config.h  vhf.c  vhf.h
recovery/aprs/: CMakeLists.txt  aprs.c  aprs.h  aprs_sleep.c  aprs_sleep.h  vhf.c  vhf.h
recovery/gps/: CMakeLists.txt  gps.c  gps.h  minmea.c  ublox-config.h
recovery/pico_sleep/: CMakeLists.txt  sleep.c  sleep.h
scripts/: format-all.sh  iteratinator.sh
setup/arch/: pico_setup_arch.sh
setup/ubuntu/: pico_setup_ubuntu.sh
src/: APRS.cc  APRS.hh  CMakeLists.txt  R2rDac.cc  R2rDac.hh  Swarm.cc  Swarm.hh  TagRecoveryBoardv0_9.h  TagUart.cc  TagUart.hh  aprs.c  config.h  conifig.h  conifig.hh  gps.c  gps.h  main.c  main.cc  main_gps.c  swarm.c  swarm.h  tag.h  vhf.c  vhf.h
swarm/: CMakeLists.txt  aprs.c  aprs.h  main.c  swarm.c  tag.c  vhf.c  vhf.h
swarm-logs/: log-06092022-1155.txt  log-06092022-2324.txt  log-06102022-1546.txt  log-06132022-2248-M138-Error-Excerpt.txt
swarm_uart_py/: swarm_uart.py
testing/APRS_tag_test/: APRS_tag_test.ino
testing/DirectSwarmTests/DirectSwarmWGps/: DirectSwarmWGps.ino
testing/RB1V0-DirectSwarm-wAPRS/: RB1V0-DirectSwarm-wAPRS.ino  TagRecoveryBoardv1_0_0.h
testing/RB1V0_1_Direct_Z/: RB1V0_1_Direct_SWARM.ino  RB1V0_Direct_TAG.ino
testing/Recovery-Board-0V9-1-Testing/: Recovery-Board-0V9-1-Testing.ino
testing/Recovery-Board-0V9-2-Testing/: Recovery-Board-0V9-2-Testing.ino
testing/Recovery-Board-0V9-Testing/: Recovery-Board-0V9-Testing.ino
testing/Recovery-Board-1V0-SwarmOnly-Testing/: Recovery-Board-1V0-SwarmOnly-Testing.ino
testing/Recovery-Board-1V0-Testing/: Recovery-Board-1V0-Testing.ino
testing/SPI-Testing/: SPI-Testing.ino
testing/deprecated/Recovery-Board-0V9-1-Testing/: Recovery-Board-0V9-1-Testing.ino
testing/direct_swarm_connect/: direct_swarm_connect.ino
testing/old_testing/SPI-Testing/: SPI-Testing.ino
testing/tagUartTest/: tagUartTest.ino
unit_tests/src/: test.c
(+771 files in other folders)
